fix color and minor position alignment

--- a/example/src/App.css
+++ b/example/src/App.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
